Make it watch all 30 minutes. Report state changes. Ability to check immediately.